    - TeamSpeak2 server statistics: teamspeak2
    - detailed virtual memory statistics: vmem
  * Disable "tcpconns" plugin by default (Closes: #478759).
  * Reenabled iptables plugin (Closes: #473435).
    - Added the plugin to collectd.conf.
    - Added /usr/share/doc/collectd/examples/iptables/.
  * New debconf template translations:
    - gl.po, thanks to Jacobo Tarrio (Closes: #482667).

 -- Sebastian Harl <sh@tokkee.org>  Mon, 26 May 2008 18:17:39 +0200

collectd (4.3.2-1) unstable; urgency=low

  * New upstream release.
    - Fixed handling of ignored sensors instances (Closes: #468143).
    - Fixed reading of wireless noise values (Closes: #471788).
  * Adopted patches and script to extractDS.px being renamed to rrd_filter.px.
  * Clarified debconf template in respect to packages required for the data
    migration (Closes: #469336).
  * collectd.conf: Moved logging plugins to the top of the file.
  * New debconf template translations:
    - de.po, thanks to Kai Wasserbäch (Closes: #469334).
    - fr.po, thanks to Florent Usseil (Closes: #468813).
    - pt.po, thanks to Américo Monteiro (Closes: #469745, #472183).
  * collectd.init.d: Consider the DISABLE option only when starting collectd.
  * Disabled iptables plugin - libiptc is no longer available in Debian.
    - Removed the plugin from collectd.conf.
    - Removed /usr/share/doc/collectd/examples/iptables/.

 -- Sebastian Harl <sh@tokkee.org>  Mon, 31 Mar 2008 12:13:18 +0200

collectd (4.3.0-2) unstable; urgency=low

  * Added "lm-sensors" to the recommended packages and README.Debian.plugins
    (this is required by the sensors plugin).
  * Restrict the libvirt-dev build dependency and the libvirt plugin to amd64,
    i386 and powerpc (libvirt is only available on those architectures).
  * Restrict the libvirt-dev build dependency to versions >= 0.4.0-6 to make
    sure Xen is supported and to fix some strange FTBFS complaining about a
    missing symbol "virDomainBlockStats".
