@@ -18,8 +18,10 @@ collectd (4.4.0-1) unstable; urgency=low
     - Added /usr/share/doc/collectd/examples/iptables/.
   * New debconf template translations:
     - gl.po, thanks to Jacobo Tarrio (Closes: #482667).
+  * Added a work around for #474087 (broken openipmi .pc files) by forcing the
+    inclusion of the ipmi plugin and manually specifying the dependencies.
 
- -- Sebastian Harl <sh@tokkee.org>  Mon, 26 May 2008 18:17:39 +0200
+ -- Sebastian Harl <sh@tokkee.org>  Tue, 27 May 2008 08:36:05 +0200
 
 collectd (4.3.2-1) unstable; urgency=low
 
